#2: added mount/flying support

--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-- dismount before interact
-- conditionally mount before movement start
-- jump to start flying
+- dismount before interact (happens automatically, not needed??)
 - hook playermovecontroller/cameramanager instead of gamepad input, to avoid blocking ui interaction
 - store oid(?) for interact command, to allow use outside island
 - moveto console command
